eclipseWorkspace/.metadata/.plugins/org.eclipse.cdt.ui/16.02.13 New Dist Sensor.build.log
19:05:03 **** Incremental Build of configuration Debug for project 16.02.13 New Dist Sensor ****
Info: Internal Builder is used for build
arm-frc-linux-gnueabi-g++ -std=c++1y "-IC:\\Users\\FYRE5480/wpilib/cpp/current/include" "-IC:\\Users\\FYRE5480\\Desktop\\FYRE-Programming-2015-2016\\eclipseWorkspace\\16.02.13 New Dist Sensor\\src" -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Robot.o" "..\\src\\Robot.cpp" 
..\src\Robot.cpp: In member function 'void Robot::ReadDistance()':
..\src\Robot.cpp:49:3: error: 'Smart' was not declared in this scope
   Smart Dashboard::PutNumber("Actual distance:", 0.1319(distanceSensor->GetValue())-1.3456);
   ^

19:05:04 Build Finished (took 1s.173ms)

